Refactor GitHub stats fetching to use GraphQL API and enhance contribution tracking
- Updated .env.example to include GITHUB_SCOPE for GitHub API permissions.
- Replaced REST API calls with GraphQL queries in github.ts for improved data retrieval.
- Implemented pagination for fetching all user repositories.
- Enhanced contribution tracking by aggregating commits, comments, and reviews from both public and private repositories.
- Improved code readability and structure with consistent formatting and additional type definitions.

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,6 @@ GITHUB_SECRET=your_github_oauth_app_secret
 
 # NextAuth.js
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret 
+NEXTAUTH_SECRET=your_nextauth_secret
+
+GITHUB_SCOPE="read:user,read:org,read:repo"
